# k8s-data-platform_dagster-workflows

./: Dockerfile  README.md  asset_serial.py  definitions.py  job_asset_parallel.py  job_asset_serial.py  job_parellel.py  job_serial.py  pyproject.toml  requirements.txt
.github/workflows/: build-image.yaml
pipelines/: definitions.py  job_asset_parallel.py  job_asset_serial.py  job_parellel.py  job_serial.py
src/: requirements.txt
src/utils/: iceberg.py  southkorea.py  spark.py
src/weather/: iceberg.py  southkorea.py
src/workflows/: configs.py  definitions.py
src/workflows/numbers/: assets.py  jobs.py  ops.py  schedules.py
src/workflows/tests/: assets.py  jobs.py  ops.py
src/workflows/weather/: assets.py  jobs.py  partitions.py  schedules.py
src/workflows/words/: assets.py  jobs.py  ops.py  schedules.py
