[project]
name = "k8s-data-platform-dagster-workflows"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dagster>=1.10.15",
    "dagster-aws>=0.26.15",
    "dagster-celery-k8s>=0.26.15",
    "dagster-clt-queued-run-coordinator>=0.1.0",
    "dagster-k8s>=0.26.15",
    "dagster-obstore>=0.2.3",
    "dagster-postgres>=0.26.15",
    "dagster-pyspark>=0.26.15",
    "dagster-webserver>=1.10.15",
    "minio>=7.2.15",
    "pandas>=2.2.3",
    "pyarrow>=20.0.0",
    "pyiceberg>=0.9.1",
    "thrift>=0.21.0",
]
